[tool.poetry]
name = "projeto prático"
version = "0.1.0"
description = ""
authors = ["Lucas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
